# swagger/swagger.json
@@ -36,7 +36,7 @@
                 }
             }
         },
-        "/login": {
+        "/Register": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -44,7 +44,80 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "登录成功后跳转主页页面",
+                "summary": "注册",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/library.JsonRes"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/library.JsonRes"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/library.JsonRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/idCard/get-full-name-by6-code": {
+            "post": {
+                "description": "传入330302返回浙江省温州市鹿城区",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "通过6位编码获取代表地区全称",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "编码",
+                        "name": "code",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/library.JsonRes"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/library.JsonRes"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/library.JsonRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "验证账号密码",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "跳转登录页面",
                 "responses": {
                     "200": {
                         "description": "OK",
